Nicer templating for rawExceptionResponse()